# kyc-agent-adk-system

./: Dockerfile  SETUP.md  demo_passport.txt  frontend_dist_fixed.html  frontend_enhanced.html  frontend_enhanced_clean.html  frontend_enhanced_dist.html  frontend_enhanced_dist_clean.html  frontend_fixed.html  pyproject.toml  run_api.py  run_ui.py  streamlit_app.py
adk/agents/: __init__.py  kyc_gap_analysis_agent.py  kyc_ingestion_agent.py  kyc_parsing_agent.py  kyc_verification_agent.py
adk/core/: __init__.py  agent_manager.py  agent_registry.py  message_bus.py
adk/interfaces/: __init__.py  agent_interface.py  message_interface.py
agents/: __init__.py  base_agent.py  gap_analysis_agent.py  ingestion_agent.py  parsing_agent.py  verification_agent.py
app/: main.py
kyc_adk_package/: README.md  requirements.txt  validate_adk.py
kyc_adk_package/adk/: __init__.py
kyc_adk_package/adk/agents/: kyc_gap_analysis_agent.py  kyc_ingestion_agent.py  kyc_parsing_agent.py  kyc_verification_agent.py
kyc_adk_package/adk/interfaces/: agent_interface.py
kyc_adk_package/deployment/: agent_config.yaml  deploy.sh
models/: __init__.py  kyc_models.py
utils/: config.py
