[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
streamlit = "^1.48.0"
google-cloud-documentai = "^3.5.0"
pydantic = "^2.11.7"
plotly = "^6.2.0"
pandas = "^2.3.1"
pillow = "^11.3.0"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"
httpx = "^0.28.1"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
